# nv-ingest

./: .gitignore  .pre-commit-config.yaml  CITATION.md  CONTRIBUTING.md  Dockerfile  README.md  contributing.md  docker-compose.yaml
nemo_retriever/: Dockerfile  README.md  pyproject.toml  retriever.md
nemo_retriever/.greptile/: files.json
nemo_retriever/developer_docs/: README.md  vdb_retrieval_refactor.md
nemo_retriever/docs/cli/: README.md  benchmarking.md  cli-client-usage.md  pdf-blueprint.md  pdf-split-tuning.md  quickstart.md  retriever_cli.md  smoke-test.md
nemo_retriever/examples/: eval_sweep.yaml
nemo_retriever/harness/: HANDOFF.md  beir_sweep_dense.yaml  test_configs.yaml  vidore_sweep.yaml
nemo_retriever/helm/: .helmignore  Chart.yaml  README.md  values-prod.yaml  values.yaml
nemo_retriever/helm/templates/: NOTES.txt  _helpers.tpl  configmap-otel.yaml  configmap.yaml  deployment-otel.yaml  deployment-vectordb.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc-retriever-results.yaml  pvc-vectordb.yaml  pvc.yaml  secret-nim-api-key.yaml  secret-pull.yaml  service-otel.yaml  service-vectordb.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
nemo_retriever/helm/templates/nims/: _nim.tpl  nims.yaml  secret-ngc-api-key.yaml
nemo_retriever/src/nemo_retriever/: __init__.py  config_utils.py  export.py  graph_ingestor.md  graph_ingestor.py  ingest-config.yaml  ingest_plans.py  ingestor.py  retriever.py  retriever_graph_utils.py  service_ingestor.py
nemo_retriever/src/nemo_retriever/adapters/: __init__.py
nemo_retriever/src/nemo_retriever/api/: __init__.py
nemo_retriever/src/nemo_retriever/audio/: __init__.py  asr_actor.py  chunk_actor.py  media_interface.py
nemo_retriever/src/nemo_retriever/caption/: caption.py
nemo_retriever/src/nemo_retriever/chart/: chart_detection.py  config.py  cpu_actor.py  gpu_actor.py  processor.py  shared.py
nemo_retriever/src/nemo_retriever/dedup/: dedup.py
nemo_retriever/src/nemo_retriever/evaluation/: README.md  __init__.py  cli.py  config.py  eval_operator.py  generation.py  generators.py  ground_truth.py  judges.py  judging.py  live_retrieval.py  orchestrator.py  retrieval_loader.py  retrievers.py  runner.py  scoring.py  scoring_operator.py  text_utils.py  types.py
nemo_retriever/src/nemo_retriever/examples/: batch_pipeline.py  common.py  fused_pipeline.py  graph_pipeline.py  inprocess_pipeline.py
nemo_retriever/src/nemo_retriever/graph/: README.md  __init__.py  abstract_operator.py  beir_eval.py  content_operators.py  content_transforms.py  cpu_operator.py  custom_operator.py  designer.py  executor.py  file_loader_operator.py  fusion.py  gpu_operator.py  ingestor_runtime.py  lancedb_sink.py  lancedb_write_operator.py  multi_type_extract_operator.py  nv_ingest_vdb_operator.py  operator_archetype.py  operator_resolution.py  pipeline_graph.py  react_agent_operator.py  recall_eval.py  rrf_aggregator_operator.py  selection_agent_operator.py  store_operator.py  subquery_operator.py  tabular_fetch_embeddings_operator.py  tabular_schema_extract_operator.py  vdb_upload_operator.py  webhook_operator.py
nemo_retriever/src/nemo_retriever/harness/: artifacts.py  cli.py  config.py  history.py  parsers.py  recall_adapters.py  reporting.py  run.py  runner.py  scheduler.py
nemo_retriever/src/nemo_retriever/html/: ray_data.py
nemo_retriever/src/nemo_retriever/image/: ray_data.py
nemo_retriever/src/nemo_retriever/infographic/: __init__.py  config.py  infographic_detection.py  processor.py
nemo_retriever/src/nemo_retriever/ingest_modes/: batch.py  fused.py  inprocess.py
nemo_retriever/src/nemo_retriever/io/: __init__.py  dataframe.py  image_store.py  markdown.py
nemo_retriever/src/nemo_retriever/llm/: __init__.py  text_utils.py  types.py
nemo_retriever/src/nemo_retriever/model/: __init__.py
nemo_retriever/src/nemo_retriever/nim/: chat_completions.py  error_reporter.py  nim.py  probe.py
nemo_retriever/src/nemo_retriever/ocr/: __init__.py  config.py  cpu_ocr.py  cpu_ocrv2.py  cpu_parse.py  gpu_ocr.py  gpu_ocrv2.py  gpu_parse.py  ocr.py  shared.py
nemo_retriever/src/nemo_retriever/operators/: content.py  embedding.py
nemo_retriever/src/nemo_retriever/page_elements/: __init__.py  cpu_actor.py  gpu_actor.py  local.py  page_elements.py  shared.py
nemo_retriever/src/nemo_retriever/params/: __init__.py  chunk_bundle.py  models.py  utils.py
nemo_retriever/src/nemo_retriever/parse/: nemotron_parse.py
nemo_retriever/src/nemo_retriever/pdf/: __init__.py  config.py  extract.py  io.py  split.py  stage.py
nemo_retriever/src/nemo_retriever/pipeline/: __init__.py  __main__.py
nemo_retriever/src/nemo_retriever/recall/: beir.py  core.py  vdb_recall.py
nemo_retriever/src/nemo_retriever/rerank/: __init__.py  rerank.py
nemo_retriever/src/nemo_retriever/service/: ARCHITECTURE.md  app.py  auth.py  cli.py  client.py  (+8 more)
nemo_retriever/tabular-dev-tools/: debug_ingest.py  duckdb_connector.py  sample_spider2_queries.csv
nemo_retriever/tests/: __init__.py  integration_test_milvus_recall.py  integration_test_milvus_vdb.py  integration_test_vdb_op_passthrough.py  test_actor_operators.py  test_agentic_operators.py  test_asr_actor.py  test_audio_benchmark.py  test_audio_chunk_actor.py  test_audio_pipeline_batch.py  test_audio_stage.py  test_audio_visual_fuser.py  test_batch_ingestor.py  test_batch_pipeline.py  test_beir_evaluation.py  test_caption.py  test_create_local_embedder.py  test_dedup.py  test_detection_summary.py  test_doc_to_pdf_actor.py  test_embed_params.py  test_evaluation_config.py  test_evaluation_orchestrator.py  test_evaluation_retrievers.py  test_factory.py  test_graph_pipeline_cli.py  test_harness_config.py  test_harness_history.py  test_harness_parsers.py  test_harness_portal.py  test_harness_reporting.py  test_harness_run.py  test_hf_cache.py  test_hf_embedder_padding.py  test_hf_model_registry.py  test_html_convert.py  test_ingest_interface.py  test_ingest_plans.py  test_ingest_retrieve_multimodal_pdf_integration.py  test_io_image_store.py  (+53 more)
nemo_retriever/tests/graph/: test_multi_type_grouping.py
(+412 files in other folders)
